--- a/app/scss/_post.scss
+++ b/app/scss/_post.scss
@@ -11,7 +11,10 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-
+/* hack to make sure footer shows up towards the bottom for pages with not much content. 
+must revisit. there must be a better way
+*/
+min-height: 80%;
       .headerimage {
       border-top-left-radius: 2px;
       border-top-right-radius: 2px;
@@ -69,6 +72,11 @@
   align-items: center;
   color: $secondary-dark-text-color;
   padding: 15px;
+  
+      pre{
+        background-color: $primary-color-contrast;  
+        padding: 2px;
+        }
   }
 }
 
