added styles for home screen, updated post layout and styles

--- a/app/scss/site.scss
+++ b/app/scss/site.scss
@@ -3,12 +3,11 @@
 
 @import 'base';
 
+@import 'home';
+
 body {
   font-family: "Roboto", "PT Sans", sans-serif, Helvetica, Arial;
   background-color: rgba(0, 0, 0, 0.02);
-  /* set back ground image for the page */
-  
-  background-image: url('../img/hero.jpg'); 
   background-size: cover;
   background-attachment: fixed;
   content: '';
