--- a/app/css/site.css
+++ b/app/css/site.css
@@ -1,11 +1,87 @@
 @charset "UTF-8";
 @import url("http://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en");
 @import url("http://fonts.googleapis.com/icon?family=Material+Icons");
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed);
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+.hero {
+  height: 80vh; }
+  .hero .intro-text {
+    padding-top: 40%;
+    color: white;
+    text-align: center;
+    font-family: 'Roboto Condensed', sans-serif; }
+  .hero .intro-text p {
+    font-size: 1.5em; }
+  @media only screen and (min-width: 40.063em) {
+    .hero .intro-text {
+      padding-top: 30%; }
+    .hero .intro-text p {
+      font-size: 1.875em; } }
+  @media only screen and (min-width: 64.063em) {
+    .hero .intro-text {
+      padding-top: 15%; }
+    .hero .intro-text p {
+      font-size: 2.5em; } }
+
+.hero-overlay {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+  height: 80vh;
+  opacity: 0; }
+
+.img-bg-section60 {
+  height: 60vh; }
+  .img-bg-section60
+h1 {
+    color: white;
+    text-align: center; }
+  .img-bg-section60 .section-header {
+    padding-top: 50%; }
+  @media only screen and (min-width: 40.063em) {
+    .img-bg-section60 .section-header {
+      padding-top: 40%; } }
+  @media only screen and (min-width: 64.063em) {
+    .img-bg-section60 .section-header {
+      padding-top: 25%; } }
+
+.img-bg-section60-overlay {
+  content: '';
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+  height: 60vh;
+  opacity: 0; }
+
+.sports {
+  background: url("http://lorempixel.com/1024/600/sports/5") no-repeat center center;
+  background-size: cover; }
+
+.nature {
+  background: url("http://lorempixel.com/1024/600/nature/10") no-repeat center center;
+  background-size: cover; }
+
+.people {
+  background: url("http://lorempixel.com/1024/600/people/1") no-repeat center center;
+  background-size: cover; }
+
+.homecontent {
+  padding-top: 2%;
+  text-align: center;
+  font-family: 'Roboto', sans-serif, Helvetica, Arial; }
+  .homecontent
+h1 {
+    font-size: 2.5em; }
+
 body {
   font-family: "Roboto", "PT Sans", sans-serif, Helvetica, Arial;
   background-color: rgba(0, 0, 0, 0.02);
-  /* set back ground image for the page */
-  background-image: url("../img/hero.jpg");
   background-size: cover;
   background-attachment: fixed;
   content: '';
@@ -45,30 +121,32 @@ h1 a {
 /* post styles _post.scss */
 .post {
   margin-top: 50px;
-  border-radius: 2px;
   box-shadow: rgba(0, 0, 0, 0.137255) 0px 4px 5px 0px, rgba(0, 0, 0, 0.117647) 0px 1px 10px 0px, rgba(0, 0, 0, 0.2) 0px 2px 4px -1px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   background-color: white;
+  margin-bottom: 10px;
   /* hack to make sure footer shows up towards the bottom for pages with not much content. 
 must revisit. there must be a better way
 */
-  min-height: 80%; }
+  min-height: 10%; }
   .post .headerimage {
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
     position: relative;
     min-height: 100px;
     background-color: #00bcd4; }
+    .post .headerimage
+img {
+      height: 100%; }
     .post .headerimage .title {
       position: absolute;
       bottom: 0px;
       left: 0px;
-      padding: 20px;
-      color: #424242; }
-      .post .headerimage .title h3 {
-        font-family: "Roboto", "PT Sans", sans-serif, Helvetica, Arial;
+      padding: 20px; }
+      .post .headerimage .title h4 {
+        font-family: "Roboto Condensed", sans-serif, Helvetica;
         color: white;
         margin: 0px;
         padding: 0px; }
@@ -82,7 +160,7 @@ must revisit. there must be a better way
   font-size: 13px;
   font-weight: normal;
   justify-content: flex-start;
-  padding: 15px; }
+  padding: 20px; }
   .post .authorinfo img {
     width: 50px;
     height: 50px;
@@ -97,9 +175,27 @@ must revisit. there must be a better way
 .post .content {
   align-items: center;
   color: rgba(0, 0, 0, 0.54);
-  padding: 15px; }
+  padding: 20px; }
+  .post .content pre {
+    background-color: #424242;
+    padding: 2px; }
+
+.post .action {
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+  padding: 1.3rem; }
+  .post .action a {
+    color: #448aff;
+    transition: color 0.3s ease;
+    text-transform: uppercase;
+    text-decoration: none; }
 
 /* end post styles _post.scss */
+code {
+  color: rgba(255, 255, 255, 0.7);
+  background-color: #424242;
+  word-wrap: break-word;
+  border-width: 0px; }
+
 .material-icons.md-18 {
   font-size: 18px; }
 
@@ -125,10 +221,6 @@ must revisit. there must be a better way
   color: rgba(255, 255, 255, 0.3); }
 
 /* begin bottom nav styling */
-.bottom-nav-container {
-  padding-left: 0px;
-  padding-right: 0px; }
-
 .bottom-nav {
   align-items: center;
   box-sizing: border-box;
