--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -1,5 +1,6 @@
 
 $primary-font-family : 'Roboto', 'PT Sans', sans-serif, Helvetica, Arial;
+$primary-title-font-family : 'Roboto Condensed', sans-serif, Helvetica;
 
 $dark-text-color: rgb(0,0,0); // dark text on light background
 $primary-dark-text-color: rgba($dark-text-color, .87); 
@@ -19,3 +20,6 @@ $primary-color-dark:  rgb(0, 151, 167);
 $accent-color: rgb(68, 138, 255);
 $accent-color-contrast: rgb(255, 255, 255);
 
+$default-boxshadow: rgba(0, 0, 0, 0.137255) 0px 4px 5px 0px, 
+                    rgba(0, 0, 0, 0.117647) 0px 1px 10px 0px, 
+                    rgba(0, 0, 0, 0.2) 0px 2px 4px -1px;
