--- a/app/scss/_post.scss
+++ b/app/scss/_post.scss
@@ -3,39 +3,43 @@
 
 .post {
   margin-top: 50px;
-  border-radius: 2px;
-  box-shadow: rgba(0, 0, 0, 0.137255) 0px 4px 5px 0px, 
-              rgba(0, 0, 0, 0.117647) 0px 1px 10px 0px, 
-              rgba(0, 0, 0, 0.2) 0px 2px 4px -1px;
+  //border-radius: 2px;
+  box-shadow: $default-boxshadow;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   background-color: white;
+  margin-bottom: 10px;
 /* hack to make sure footer shows up towards the bottom for pages with not much content. 
 must revisit. there must be a better way
 */
-min-height: 80%;
+    min-height: 10%;
+    
       .headerimage {
       border-top-left-radius: 2px;
       border-top-right-radius: 2px;
       position: relative;
       min-height: 100px;
       background-color: $primary-color;
-       
-         .title {
+        
+        img
+        {
+            height:100%;
+
+        }
+        
+        .title {
           position: absolute;
           bottom: 0px;
           left: 0px;
           padding: 20px;
-          color: $primary-color-contrast;
-        
-           h3 {
-                font-family: $primary-font-family;
+           h4 {
+                font-family: $primary-title-font-family;
                 color: $primary-light-text-color;
                 margin: 0px;
                 padding: 0px;
               }
-         }
+        }
       
     }
 }
@@ -51,7 +55,7 @@ min-height: 80%;
   font-size: 13px;
   font-weight: normal;
   justify-content: flex-start;
-  padding: 15px;
+  padding: 20px;
   
   img {
       width: 50px;
@@ -71,13 +75,29 @@ min-height: 80%;
   .content {
   align-items: center;
   color: $secondary-dark-text-color;
-  padding: 15px;
+  padding:20px;
   
       pre{
         background-color: $primary-color-contrast;  
         padding: 2px;
         }
-  }
+
+    }
+  
+      .action {
+      border-top: 1px solid $divider-dark-text-color;
+      padding: 1.3rem;
+      
+              a {
+          color: $accent-color;
+          transition: color 0.3s ease;
+          text-transform: uppercase;
+          text-decoration: none;
+        }
+    }
 }
+
+
+
 
 /* end post styles _post.scss */
