--- a/app/scss/_card.scss
+++ b/app/scss/_card.scss
@@ -1,6 +1,6 @@
 /* post styles _post.scss */
 
-.post {
+.card {
   margin-top: 50px;
   //border-radius: 2px;
   box-shadow: $default-boxshadow;
@@ -9,17 +9,22 @@
   flex-direction: column;
   background-color: white;
   margin-bottom: 10px;
-  
+
   .header {
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
     position: relative;
     min-height: 100px;
     background-color: $primary-color;
+    
     img {
       max-height: 200px;
+      min-height: 200px;
       width: 100%;
+      
     }
+    
+
     .title {
       position: absolute;
       bottom: 0px;
@@ -34,7 +39,8 @@
     }
   }
 }
-.post {
+
+.card {
   .authorinfo {
     align-items: center;
     box-sizing: border-box;
@@ -45,6 +51,7 @@
     font-weight: normal;
     justify-content: flex-start;
     padding: 20px;
+    
     img {
       width: 50px;
       height: 50px;
@@ -59,23 +66,34 @@
     }
   }
   .content {
-    align-items: center;
     color: $secondary-dark-text-color;
     padding: 20px;
-    pre {
-      background-color: $primary-color-contrast;
-      padding: 2px;
-    }
+    
+    min-height: 200px;
+    max-height: 200px;
+    overflow: hidden;
+
   }
-  .action {
-    border-top: 1px solid $divider-dark-text-color;
-    padding: 1.3rem;
-    a {
-      color: $accent-color;
-      transition: color 0.3s ease;
-      text-transform: uppercase;
-      text-decoration: none;
-    }
-  }
+
+}
+
+.card:hover{
+    opacity: .8;
+  -webkit-transition: .3s ease;
+  -moz-transition: .3s ease;
+  -ms-transition: .3s ease;
+  -o-transition: .3s ease;
+  transition: .3s ease
+}
+
+
+#main-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+section {
+  flex: 1;
 }
 /* end post styles _post.scss */
