--- a/app/css/site.css
+++ b/app/css/site.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-@import url("http://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en");
 @import url("http://fonts.googleapis.com/icon?family=Material+Icons");
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed);
 @import url(https://fonts.googleapis.com/css?family=Roboto);
@@ -81,7 +80,7 @@ h1 {
 
 /* post styles _post.scss */
 .card {
-  margin-top: 50px;
+  margin-top: 10px;
   box-shadow: rgba(0, 0, 0, 0.137255) 0px 4px 5px 0px, rgba(0, 0, 0, 0.117647) 0px 1px 10px 0px, rgba(0, 0, 0, 0.2) 0px 2px 4px -1px;
   box-sizing: border-box;
   display: flex;
@@ -118,7 +117,8 @@ h1 {
   font-size: 13px;
   font-weight: normal;
   justify-content: flex-start;
-  padding: 20px; }
+  padding: 20px;
+  text-align: left; }
   .card .authorinfo img {
     width: 50px;
     height: 50px;
@@ -133,6 +133,7 @@ h1 {
 .card .content {
   color: rgba(0, 0, 0, 0.54);
   padding: 20px;
+  text-align: left;
   min-height: 200px;
   max-height: 200px;
   overflow: hidden; }
