--- a/app/scss/_card.scss
+++ b/app/scss/_card.scss
@@ -1,7 +1,7 @@
 /* post styles _post.scss */
 
 .card {
-  margin-top: 50px;
+  margin-top: 10px;
   //border-radius: 2px;
   box-shadow: $default-boxshadow;
   box-sizing: border-box;
@@ -51,7 +51,7 @@
     font-weight: normal;
     justify-content: flex-start;
     padding: 20px;
-    
+    text-align: left;
     img {
       width: 50px;
       height: 50px;
@@ -68,7 +68,7 @@
   .content {
     color: $secondary-dark-text-color;
     padding: 20px;
-    
+    text-align: left;
     min-height: 200px;
     max-height: 200px;
     overflow: hidden;
