--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -23,3 +23,31 @@ $accent-color-contrast: rgb(255, 255, 255);
 $default-boxshadow: rgba(0, 0, 0, 0.137255) 0px 4px 5px 0px, 
                     rgba(0, 0, 0, 0.117647) 0px 1px 10px 0px, 
                     rgba(0, 0, 0, 0.2) 0px 2px 4px -1px;
+                    
+
+html{
+  font-size: 16px;
+}
+body {
+  font-family: "Roboto", "PT Sans", sans-serif, Helvetica, Arial;
+  background-color: rgba(0, 0, 0, 0.02);
+  background-size: cover;
+  background-attachment: fixed;
+  content: '';
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  height: 100%;
+}
+
+// This goes around the whole content
+.main-wrapper {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.content-wrapper {
+  flex: 1;
+}
