updates to layout and style for post

--- a/app/scss/_card.scss
+++ b/app/scss/_card.scss
@@ -39,6 +39,14 @@
         margin: 0px;
         padding: 0px;
       }
+      
+      h3 {
+        font-family: $primary-title-font-family;
+        color: $primary-light-text-color;
+        margin: 0px;
+        padding: 0px;
+      }
+      
     }
   }
 }
