--- a/app/scss/_post.scss
+++ b/app/scss/_post.scss
@@ -27,6 +27,12 @@
       bottom: 0px;
       left: 0px;
       padding: 20px;
+      h3 {
+        font-family: $primary-title-font-family;
+        color: $primary-light-text-color;
+        margin: 0px;
+        padding: 0px;
+      }
       h4 {
         font-family: $primary-title-font-family;
         color: $primary-light-text-color;
