--- a/app/css/site.css
+++ b/app/css/site.css
@@ -132,6 +132,11 @@ h1 {
         color: white;
         margin: 0px;
         padding: 0px; }
+      .card .header .title h3 {
+        font-family: "Roboto Condensed", sans-serif, Helvetica;
+        color: white;
+        margin: 0px;
+        padding: 0px; }
 
 .card .authorinfo {
   align-items: center;
@@ -233,6 +238,11 @@ h1 a {
       bottom: 0px;
       left: 0px;
       padding: 20px; }
+      .post .header .title h3 {
+        font-family: "Roboto Condensed", sans-serif, Helvetica;
+        color: white;
+        margin: 0px;
+        padding: 0px; }
       .post .header .title h4 {
         font-family: "Roboto Condensed", sans-serif, Helvetica;
         color: white;
